syntax = "proto3";
package daemon;
// Daemon服务方法
service Daemon {
  // 获取列表页
  rpc Lists(ListRequest) returns(ListResponse);
  rpc GetFirstById(IdRequest) returns(CronBase);
  // 添加数据
  rpc Add(AddRequest) returns(Error);
  // 更改数据
  rpc Update(UpdateRequest) returns(Error);
  // 杀死数据
  rpc Killer(KillerRequest) returns(Error);
  // 启动杀死的数据
  rpc OnLine(KillerRequest) returns(Error);

}
// 列表页 请求参数
message ListRequest {
  SearchPage page = 1 ;
}
// 列表页返回参数
message ListResponse {
  repeated DaemonList items = 1;
}

// 添加的请求参数
message AddRequest {
  CronBase  r = 1 ;
}
message UpdateRequest {
  int32  id = 1;
  CronBase r = 2 ;
}

// 请求的基础数据
message CronBase {
  string name = 1 ;
  string exp = 2 ;
  string  command = 3 ;
  string  desc = 4 ;
  int32   is_killer = 5;
  string  run_at = 6;
  string created_at = 7;
  string updated_at = 8;
  int32 id = 9;
}


message KillerRequest {
  int32  id = 1;
}
message IdRequest {
  int32  id = 1 ;
}

//  返回数据的基础数据
message  DaemonList {
  int32 id = 1;
  string  name = 2 ;
  string command = 3 ;
  string desc = 4;
  string created_at = 5;
  string updated_at = 6;
  int32  is_killer = 7;
}
// 请求分页
message SearchPage {
  int32  page = 1 ;
  int32  page_size = 2 ;
}
// 不需要返回参数的数据
message Error {
}
